Adding sign up example

--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
-    "connect-flash": "^0.1.1",
-    "passport-local": "^1.0.0",
+    "ejs-locals": "^1.0.2",
+    "express": "~4.0.0",
     "express-session": "^1.6.1",
-    "resourceful": "^0.2.3"
+    "morgan": "~1.0.0",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "resourceful": "^0.2.3",
+    "static-favicon": "~1.0.0"
   }
 }
